@@ -23,50 +23,18 @@
 
 /*
  * @test
- * @bug 7152176 8164437
+ * @bug 7152176
  * @summary More krb5 tests
- * @library /test/lib
  * @compile -XDignore.symbol.file Basic.java
  * @run main/othervm Basic
  */
 
-import jdk.test.lib.process.ProcessTools;
 import sun.security.jgss.GSSUtil;
 
-import java.util.List;
-import java.util.stream.Stream;
-
+// The basic krb5 test skeleton you can copy from
 public class Basic {
 
-    public static void main(String[] args) throws Throwable {
-
-        if (args.length == 0) { // jtreg launched here
-
-            // With all modules
-            test("jdk.security.jgss");
-
-            // With limited modules
-            List<String> cmd = ProcessTools.createJavaProcessBuilder().command();
-            Stream.of(jdk.internal.misc.VM.getRuntimeArguments())
-                    .filter(arg -> arg.startsWith("--add-exports=") ||
-                            arg.startsWith("--add-opens="))
-                    .forEach(cmd::add);
-            cmd.addAll(List.of(
-                    "-Dtest.src=" + System.getProperty("test.src"),
-                    "--add-modules",
-                        "java.base,java.security.jgss,jdk.security.auth",
-                    "--limit-modules",
-                        "java.security.jgss,jdk.security.auth",
-                    "Basic",
-                    "launched-limited"));
-            ProcessTools.executeCommand(cmd.toArray(new String[cmd.size()]))
-                    .shouldHaveExitValue(0);
-        } else { // Launched by ProcessTools above, with limited modules.
-            test("java.security.jgss");
-        }
-    }
-
-    static void test(String expected) throws Exception {
+    public static void main(String[] args) throws Exception {
 
         new OneKDC(null).writeJAASConf();
 
@@ -92,12 +60,5 @@ public class Basic {
         b.startAsServer(GSSUtil.GSS_KRB5_MECH_OID);
 
         Context.handshake(s2, b);
-
-        // Bonus test for 8164437.
-        String moduleName = c.x().getClass().getModule().getName();
-        if (!moduleName.equals(expected)) {
-            throw new Exception("Expected: " + expected
-                    + ". Actual: " + moduleName);
-        }
     }
 }
